added form styles

--- a/index.html
+++ b/index.html
@@ -42,19 +42,22 @@
             </div>
         </section>
     </nav>
-    <form class="movie-form" style="">
-        <h3>I've recently watched</h3>
+    <div class="container">
+    <form class="movie-form">
+        <h3 class="form-title">I've recently watched...</h3>
         <input type="text" name="titulo" value="" placeholder="Enter a title" class="input-text">
         <input type="text" name="img" value="" placeholder="Enter a film's image URL..." class="input-text">
         <input type="text" name="director" value="" placeholder="Director" class="input-text">
         <input type="text" name="year" value="" placeholder="Release year" class="input-text">
-        <input type="text" name="clasificacion" value="" placeholder="Genre" class="input-text">
-        <input type="text" name="reparto" value="" placeholder="Cast" class="input-text">
+        <input type="text" name="genre" value="" placeholder="Genre" class="input-text">
+        <input type="text" name="cast" value="" placeholder="Cast" class="input-text">
         <input type="text" name="sinopsis" value="" placeholder="Plot" class="input-text">
         <input type="text" name="adaptacion" value="" placeholder="Is it an adapted story?" class="input-text">
         <input type="text" name="rating" value="" placeholder="From 1 to 10" class="input-text">
-        <input type="submit" name="submit" value="Add" class="submit">
+        <input type="submit" name="submit" value="Add" class="btn btn-outline-danger">
     </form>
+    <img class="form-img" src="./resources/Best-Movie-Year-Ever.webp">
+    </div>
     <img class="banner" src="./resources/banner.jpg">
 </header>
 <body>
@@ -70,14 +73,3 @@
     <!-- Copyright -->
 </footer>
 </html>
-
-        <!--
-        <input type="text" name="year" value="" placeholder="Release year" class="input-text">
-        <input type="text" name="clasificacion" value="" placeholder="Genre" class="input-text">
-        <input type="text" name="reparto" value="" placeholder="Cast" class="input-text">
-        <input type="text" name="sinopsis" value="" placeholder="Plot" class="input-text">
-        <input type="text" name="adaptacion" value="" placeholder="Is it an adapted story?" class="input-text">
-        <input type="text" name="rating" value="" placeholder="From 1 to 10" class="input-text">
-        <input type="submit" name="submit" value="Add" class="submit">-->
-
-        <!--<input type="text"name="id" value="" placeholder="id" class="input-text">-->
