--- a/index.html
+++ b/index.html
@@ -25,19 +25,9 @@
                     <li class="navItem1" class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#" id="add-movie-form">Add Film/Serie+</a>
                     </li>
-                    <li class="navItem2" class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="dropdown">Sort By</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
                 </ul>
                 <form class="d-flex">
                     <input cls="saform-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button type="button" class="btn btn-outline-danger">Search</button>
                 </form>
             </div>
         </section>
@@ -45,18 +35,16 @@
     <div class="container">
     <form class="movie-form">
         <h3 class="form-title">I've recently watched...</h3>
-        <input type="text" name="titulo" value="" placeholder="Enter a title" class="input-text">
-        <input type="text" name="img" value="" placeholder="Enter a film's image URL..." class="input-text">
+        <input type="text" name="titulo" value="" placeholder="Title" class="input-text">
+        <input type="text" name="img" value="" placeholder="Film's image URL..." class="input-text">
         <input type="text" name="director" value="" placeholder="Director" class="input-text">
-        <input type="text" name="year" value="" placeholder="Release year" class="input-text">
-        <input type="text" name="genre" value="" placeholder="Genre" class="input-text">
+        <input type="text" name="year" value="" placeholder="Year" class="input-text">
+        <input type="text" name="genre" value="" placeholder="Category" class="input-text">
         <input type="text" name="cast" value="" placeholder="Cast" class="input-text">
         <input type="text" name="sinopsis" value="" placeholder="Plot" class="input-text">
-        <input type="text" name="adaptacion" value="" placeholder="Is it an adapted story?" class="input-text">
-        <input type="text" name="rating" value="" placeholder="From 1 to 10" class="input-text">
+        <input type="text" name="rating" value="" placeholder="Rating from 1 to 10" class="input-text">
         <input type="submit" name="submit" value="Add" class="btn btn-outline-danger">
     </form>
-    <img class="form-img" src="./resources/Best-Movie-Year-Ever.webp">
     </div>
     <img class="banner" src="./resources/banner.jpg">
 </header>
