search bar implemented

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input cls="saform-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input cls="saform-control me-2" id="search" type="search" placeholder="Search" aria-label="Search">
                 </form>
             </div>
         </section>
